--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -6,56 +6,141 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%- title %></title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="./assets/style/all.css">
+    
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+<body>
+  <nav class="topBar">
+      <div class="wrap">
+          <h1><a href="#" class="logo">WOWOROOM</a></h1>
+          <span class="material-icons menuToggle">
+              menu
+          </span>
+          <ul class="topBar-menu">
+              <li><a href="#bedAdvantage">床墊優勢</a></li>
+              <li><a href="#recommendation">好評推薦</a></li>
+              <li><a href="#transport">運送方式</a></li>
+              <li><a href="#orderInfo">立即預訂</a></li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
       </div>
-    </nav>
-
+  </nav>
     <%- contents %>
-
-    <footer class="footer">
-      footer
-    </footer>
-
+  <section class="orderInfo wrap" id="orderInfo">
+      <h3 class="section-title">填寫預訂資料</h3>
+      <form action="" class="orderInfo-form">
+          <div class="orderInfo-formGroup">
+              <label for="customerName" class="orderInfo-label">姓名</label>
+              <div class="orderInfo-inputWrap">
+                  <input type="text" class="orderInfo-input" id="customerName" placeholder="請輸入姓名" name="姓名">
+                  <p class="orderInfo-message" data-message="姓名">必填</p>
+              </div>
+          </div>
+          <div class="orderInfo-formGroup">
+              <label for="customerPhone" class="orderInfo-label">電話</label>
+              <div class="orderInfo-inputWrap">
+                  <input type="tel" class="orderInfo-input" id="customerPhone" placeholder="請輸入電話" name="電話">
+                  <p class="orderInfo-message" data-message="電話">必填</p>
+              </div>
+          </div>
+          <div class="orderInfo-formGroup">
+              <label for="customerEmail" class="orderInfo-label">Email</label>
+              <div class="orderInfo-inputWrap">
+                  <input type="email" class="orderInfo-input" id="customerEmail" placeholder="請輸入 Email" name="Email">
+                  <p class="orderInfo-message" data-message="Email">必填</p>
+              </div>
+          </div>
+          <div class="orderInfo-formGroup">
+              <label for="customerAddress" class="orderInfo-label">寄送地址</label>
+              <div class="orderInfo-inputWrap">
+                  <input type="text" class="orderInfo-input" id="customerAddress" placeholder="請輸入寄送地址" name="寄送地址">
+                  <p class="orderInfo-message" data-message="寄送地址">必填</p>
+              </div>
+          </div>
+          <div class="orderInfo-formGroup">
+              <label for="tradeWay" class="orderInfo-label">交易方式</label>
+              <div class="orderInfo-inputWrap">
+                  <select id="tradeWay" class="orderInfo-input" name="交易方式">
+                      <option value="ATM" selected>ATM</option>
+                      <option value="信用卡">信用卡</option>
+                      <option value="超商付款">超商付款</option>
+                  </select>
+              </div>
+          </div>
+          <input type="submit" value="送出預訂資料" class="orderInfo-btn">
+      </form>
+  </section>  
+    <!-- 預設 JS，請同學不要修改此處 -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const ele = document.querySelector('.recommendation-wall');
+      ele.style.cursor = 'grab';
+      let pos = { top: 0, left: 0, x: 0, y: 0 };
+      const mouseDownHandler = function(e) {
+          ele.style.cursor = 'grabbing';
+          ele.style.userSelect = 'none';
+    
+          pos = {
+              left: ele.scrollLeft,
+              top: ele.scrollTop,
+              // Get the current mouse position
+              x: e.clientX,
+              y: e.clientY,
+          };
+    
+          document.addEventListener('mousemove', mouseMoveHandler);
+          document.addEventListener('mouseup', mouseUpHandler);
+      };
+      const mouseMoveHandler = function(e) {
+          // How far the mouse has been moved
+          const dx = e.clientX - pos.x;
+          const dy = e.clientY - pos.y;
+    
+          // Scroll the element
+          ele.scrollTop = pos.top - dy;
+          ele.scrollLeft = pos.left - dx;
+      };
+      const mouseUpHandler = function() {
+          ele.style.cursor = 'grab';
+          ele.style.removeProperty('user-select');
+    
+          document.removeEventListener('mousemove', mouseMoveHandler);
+          document.removeEventListener('mouseup', mouseUpHandler);
+      };
+      // Attach the handler
+      ele.addEventListener('mousedown', mouseDownHandler);
+    });
+    // menu 切換
+    let menuOpenBtn = document.querySelector('.menuToggle');
+    let linkBtn = document.querySelectorAll('.topBar-menu a');
+    let menu = document.querySelector('.topBar-menu');
+    menuOpenBtn.addEventListener('click', menuToggle);
+    
+    linkBtn.forEach((item) => {
+      item.addEventListener('click', closeMenu);
+    })
+    
+    function menuToggle() {
+      if(menu.classList.contains('openMenu')) {
+          menu.classList.remove('openMenu');
+      }else {
+          menu.classList.add('openMenu');
+      }
+    }
+    function closeMenu() {
+      menu.classList.remove('openMenu');
+    }
+  </script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css" rel="stylesheet">  
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
     <script src="./assets/js/vendors.js"></script>
+    <script src="./assets/js/config.js"></script>
     <script src="./assets/js/all.js"></script>
-  </body>
+</body>
 
 </html>
