--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -71,7 +71,7 @@
                   </select>
               </div>
           </div>
-          <input type="submit" value="送出預訂資料" class="orderInfo-btn">
+          <input data-submit type="submit" value="送出預訂資料" class="orderInfo-btn">
       </form>
   </section>  
     <!-- 預設 JS，請同學不要修改此處 -->
@@ -139,7 +139,6 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
     <script src="./assets/js/vendors.js"></script>
-    <script src="./assets/js/config.js"></script>
     <script src="./assets/js/all.js"></script>
 </body>
 
