--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -3,4 +3,6 @@
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 
 
-@import './layout/index.scss'
+
+@import './admin.scss';
+@import './layout/index.scss';
