--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -138,8 +138,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css" rel="stylesheet">  
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
-    <script src="./assets/js/<%- current %>.js"></script>
-    <script src="./assets/js/<%- current %>.js"></script>
+    
+    <script src="./assets/js/config.js"></script>
     <script src="./assets/js/all.js"></script>
 </body>
 
