--- a/app/assets/style/layout/_index.scss
+++ b/app/assets/style/layout/_index.scss
@@ -839,3 +839,13 @@ body {
   display: none;
 }
 /*# sourceMappingURL=all.css.map */
+.cartAmount {
+  display: flex;
+  align-items: center;
+}
+.cartAmount-icon {
+  padding: 10px;
+}
+.mb-10{
+  margin-bottom: 10px;
+}
